# flexBPE

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  flexbpe.cmake.in  flexbpe.pc.in
flexBPE/: CMakeLists.txt  flexBPE.cpp  flexBPE.h  flexBPE_trainer.cpp  flexBPE_trainer.h  main.cpp  main2.cpp
scripts/: run_lcov.sh
test/: CMakeLists.txt  flexbpe_test.cpp
test/assets/: corpus.txt
